crates/engine/tests/rules/snapshots/rules__layers__layers_type_change_before_pt.snap
---
source: crates/engine/tests/rules/layers.rs
expression: runner.snapshot()
---
{
  "players": [
    {
      "life": 20,
      "hand": [],
      "graveyard": []
    },
    {
      "life": 20,
      "hand": [],
      "graveyard": []
    }
  ],
  "battlefield": [
    {
      "name": "Animator",
      "owner": 0,
      "power": 2,
      "toughness": 2,
      "tapped": false,
      "damage": 0,
      "keywords": []
    },
    {
      "name": "Artifact Widget",
      "owner": 0,
      "power": 1,
      "toughness": 1,
      "tapped": false,
      "damage": 0,
      "keywords": []
    },
    {
      "name": "Lord",
      "owner": 0,
      "power": 3,
      "toughness": 3,
      "tapped": false,
      "damage": 0,
      "keywords": []
    }
  ],
  "stack": [],
  "events": []
}
